# aoc-2022-rust

d11/src/: main.rs  operation.rs
d11p2/: Cargo.toml
d11p2/src/: d11p2.rs
